nullaway_error_54FF1120-CB51-4FAE-BF77-E2F43BC466B1.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/socket/server/support/HandshakeWebSocketService.java:253: error: [NullAway] dereferenced expression this.sessionAttributePredicate is @Nullable
						.filter(entry -> this.sessionAttributePredicate.test(entry.getKey()))
						                                               ^
    (see http://t.uber.com/nullaway )
